--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body {
 .nav-bar {
     width: 100%;  
     height: 80px; 
+    position: fixed;
+    top: 0;
     
 }
 .logo {
@@ -40,11 +42,12 @@ body {
     text-align: center;
     font-family: 'Cormorant Infant', serif;
     font-style: italic;
-    font-weight: 300;
-    font-size: 40px;
+    font-weight: normal;
+    font-size: 50px;
     line-height: 20px;
     letter-spacing: 0.90em;
     margin-bottom: 50px;
+    margin-top: 150px;
 }
 
 .book {
@@ -100,18 +103,28 @@ body {
     letter-spacing: 0.8em;
 }
 
-.room-container{
-    display: flex;
-    justify-content: left;
- 
-}
+
 
 .room{
-    box-shadow: 5px 10px 4px rgba(0, 0, 0, 0.25);
     margin-top: 150px;
     width: 30%;
     height: 20%;
     margin-left: 150px;
+  
+}
+
+.text-1{
+  position: absolute;
+  text-align: center;
+  font-family: 'Cormorant Infant', serif;
+  font-style: italic;
+  font-size: 60px;
+  font-weight: 300;
+  line-height: 80px;
+  letter-spacing: 0.255em;
+  color: black;
+  margin-left: 800px;
+  margin-top: -800px;
 }
 
 
