--- a/style.css
+++ b/style.css
@@ -68,10 +68,8 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 15%;
-    margin-bottom: 10px;
-    margin-top: -15px;
-
+    width: 100%;
+    height: 100%;
   }
   .circle {
     border-radius: 60%;
@@ -81,7 +79,7 @@ body {
     border: 0.7px solid #000000;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 30px;
+    margin-top: -60px;
     color: #000;
     text-align: center;
     font-size: 20px;
