--- a/style.css
+++ b/style.css
@@ -42,15 +42,16 @@ body {
   }
 .step{
     text-align: center;
+    margin-left: 100px;
     font-family: 'Cormorant Infant', serif;
     font-style: italic;
     font-weight: normal;
-    font-size: 80px;
+    font-size: 70px;
     line-height: 20px;
     font-weight: 500;
     letter-spacing: 0.90em;
-    margin-bottom: 50px;
-    margin-top: 150px;
+    margin-bottom: 30px;
+    margin-top: 110px;
 }
 
 .book {
@@ -69,7 +70,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    height: 100%;
+    height: 90%;
   }
   .circle {
     border-radius: 60%;
@@ -79,7 +80,7 @@ body {
     border: 0.7px solid #000000;
     margin-left: auto;
     margin-right: auto;
-    margin-top: -60px;
+    margin-top: -80px;
     color: #000;
     text-align: center;
     font-size: 20px;
