--- a/style.css
+++ b/style.css
@@ -1,120 +1,128 @@
 body {
-    background:     linear-gradient(180deg, rgba(255, 253, 253, 0.77) 0%, rgba(84, 76, 76, 0.45) 100%);
-    background-attachment: fixed; 
+  background: linear-gradient(180deg, rgba(255, 253, 253, 0.77) 0%, rgba(84, 76, 76, 0.45) 100%);
+  background-attachment: fixed;
 }
+
+
 
 .nav-bar {
-    width: 100%;  
-    height: 70px; 
-    position: fixed;
-    top: 0;
-    background-color: white;
+  width: 100%;
+  height: 70px;
+  position: fixed;
+  top: 0;
+  background-color: white;
 
-    
 }
+
 .logo {
-    display: inline-block;
-    vertical-align: top;
-    margin-left: 60px;
-    margin-right: 250px;
-    margin-top: 25px;    
+  display: inline-block;
+  vertical-align: top;
+  margin-left: 60px;
+  margin-right: 250px;
+  margin-top: 25px;
 }
-.nav-bar > a {
-    display: inline-block;
-    margin-left: 30px;
-    margin-right: 30px;
-    height: 80px;        
-    line-height: 80px;   
-    font-family: 'Inter', sans-serif;
-    font-size: 15px;
-    color: black;
-    text-decoration: none;                                            
+
+.nav-bar>a {
+  display: inline-block;
+  margin-left: 30px;
+  margin-right: 30px;
+  height: 80px;
+  line-height: 80px;
+  font-family: 'Inter', sans-serif;
+  font-size: 15px;
+  color: black;
+  text-decoration: none;
 }
+
 .btn {
-    border: 1.5px solid black;
-    background-color: white;
-    color: black;
-    padding: 10px 45px;
-    font-size: 16px;
-    cursor: pointer;
-    font-family: 'Inter', sans-serif;
-    margin-left: 180px;
-  }
-.step{
-    text-align: center;
-    margin-left: 100px;
-    font-family: 'Cormorant Infant', serif;
-    font-style: italic;
-    font-weight: normal;
-    font-size: 70px;
-    line-height: 20px;
-    font-weight: 500;
-    letter-spacing: 0.90em;
-    margin-bottom: 30px;
-    margin-top: 110px;
+  border: 1.5px solid black;
+  background-color: white;
+  color: black;
+  padding: 10px 45px;
+  font-size: 16px;
+  cursor: pointer;
+  font-family: 'Inter', sans-serif;
+  margin-left: 180px;
+}
+
+.step {
+  text-align: center;
+  margin-left: 100px;
+  font-family: 'Cormorant Infant', serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 70px;
+  line-height: 20px;
+  font-weight: 500;
+  letter-spacing: 0.90em;
+  margin-bottom: 30px;
+  margin-top: 110px;
 }
 
 .book {
-    border-color: black;
-    color: black;
-    
-    
-  }
-  
-  .book:hover {
-    background-color: #e7e7e7;;
-    color: black;
-  }
+  border-color: black;
+  color: black;
+
+
+}
+
+.book:hover {
+  background-color: #e7e7e7;
+  ;
+  color: black;
+}
+
 .door {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    height: 90%;
-  }
-  .circle {
-    border-radius: 60%;
-    width: 90px;
-    height: 90px;
-    padding: 10px;
-    border: 0.7px solid #000000;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: -80px;
-    color: #000;
-    text-align: center;
-    font-size: 20px;
-    font-family: 'Inter', sans-serif;
-    font-style: italic;
-    font-weight: 100;
-  }
-  
-.words{
-    color: black;
-    font-family: 'Inter', sans-serif;
-    font-style: italic;
-    letter-spacing: 0.34em;
-    font-weight: 300;
-    font-size: 15px;
-    position: absolute;
-    line-height: 20px;
-    width: 192px;
-    height: 90px;
-    margin-left: 850px;
-    top: 310px; 
-    letter-spacing: 0.8em;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  height: 90%;
+}
+
+.circle {
+  border-radius: 60%;
+  width: 90px;
+  height: 90px;
+  padding: 10px;
+  border: 0.7px solid #000000;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -80px;
+  color: #000;
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Inter', sans-serif;
+  font-style: italic;
+  font-weight: 100;
+}
+
+.words {
+  color: black;
+  font-family: 'Inter', sans-serif;
+  font-style: italic;
+  letter-spacing: 0.34em;
+  font-weight: 300;
+  font-size: 15px;
+  position: absolute;
+  line-height: 20px;
+  width: 192px;
+  height: 90px;
+  margin-left: 850px;
+  top: 310px;
+  letter-spacing: 0.8em;
 }
 
 
 
-.room1{
-    margin-top: 150px;
-    margin-left: 150px;
+.room1 {
+  margin-top: 150px;
+  margin-left: 150px;
 
-  
+
 }
 
-.text-1{
+.text-1 {
   position: absolute;
   text-align: center;
   font-family: 'Cormorant Infant', serif;
@@ -127,12 +135,13 @@ body {
   margin-left: 800px;
   margin-top: -800px;
 }
-.sign1{
+
+.sign1 {
   margin-top: 15px;
 }
 
 
-.card{
+.card {
   border: 1.5px solid rgba(0, 0, 0, 0.7);
   box-sizing: border-box;
   width: 316px;
@@ -146,10 +155,12 @@ body {
   font-style: normal;
   overflow: hidden;
 }
-.hide{
+
+.hide {
   display: none;
 }
-.card:hover + .hide{
+
+.card:hover+.hide {
   display: block;
   color: white;
   background-color: black;
@@ -163,7 +174,8 @@ body {
   text-decoration: none;
   padding: 15px 10px;
 }
-.card2{
+
+.card2 {
   border: 1.5px solid rgba(0, 0, 0, 0.7);
   box-sizing: border-box;
   width: 316px;
@@ -177,7 +189,8 @@ body {
   font-style: normal;
   overflow: hidden;
 }
-.card2:hover + .hide{
+
+.card2:hover+.hide {
   display: block;
   color: white;
   background-color: black;
@@ -192,17 +205,19 @@ body {
   padding: 15px 10px;
 }
 
-.room2{
- margin-left: 750px;
- margin-top: -680px;
+.room2 {
+  margin-left: 750px;
+  margin-top: -680px;
 }
-.room3{
+
+.room3 {
   margin-top: 50px;
   margin-left: 150px;
 
 
 }
-.text-2{
+
+.text-2 {
   position: absolute;
   text-align: center;
   font-family: 'Cormorant Infant', serif;
@@ -216,7 +231,7 @@ body {
   margin-top: -730px;
 }
 
-.btn2{
+.btn2 {
   border: 2px solid rgba(0, 0, 0, 0.7);
   background: none;
   color: black;
@@ -227,7 +242,7 @@ body {
   letter-spacing: 0.255em;
 }
 
-.locations{
+.locations {
   text-align: center;
   font-family: 'Cormorant Infant', serif;
   font-style: italic;
@@ -238,7 +253,7 @@ body {
   color: black;
 }
 
-.map{
+.map {
   margin-left: auto;
   margin-right: auto;
   width: 55%;
@@ -254,7 +269,8 @@ body {
   margin-left: 150px;
   margin-top: 60px;
 }
-.footer-left a{
+
+.footer-left a {
   color: black;
   text-decoration: none;
   list-style: none;
@@ -262,7 +278,8 @@ body {
   font-weight: 400;
   font-size: 16px;
 }
-.footer-left li{
+
+.footer-left li {
   margin: 10px 0;
 }
 
@@ -276,7 +293,8 @@ body {
   margin-left: 650px;
   margin-top: -310px;
 }
-.footer-middle a{
+
+.footer-middle a {
   color: black;
   text-decoration: none;
   list-style: none;
@@ -284,9 +302,11 @@ body {
   font-weight: 400;
   font-size: 16px;
 }
-.footer-middle li{
+
+.footer-middle li {
   margin: 10px 0;
 }
+
 .footer-right {
   list-style: none;
   font-family: 'Inter', sans-serif;
@@ -297,17 +317,7 @@ body {
   margin-left: 1150px;
   margin-top: -270px;
 }
-.footer-right li{
+
+.footer-right li {
   margin-left: 40px;
 }
-
-
-
-
-
-
-
-
-  
-
-
