--- a/booking.css
+++ b/booking.css
@@ -7,16 +7,14 @@ body {
 .banner {
   margin-bottom: 50px;
 }
-
-.custom-select {
-  margin-bottom: 40px;
-  margin-left: 50px;
+label[for="location"]{
+  display: none;
 }
 
 select {
   background: none;
-  margin-left: 30px;
-  margin-left: 50px;
+  margin-bottom: 40px;
+  margin-left: 100px;
   width: 220px;
   border: none;
   font-size: 24px;
@@ -42,7 +40,7 @@ input[type=date] {
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
-  color: black;
+  color: grey;
   margin: 10px 10px 5px 0;
   margin-left: 50px;
   cursor: pointer;
